# 3d-print-logger

./: .dockerignore  .env.example  .gitignore  INSTALL.md  README.md  alembic.ini  config.example.yml  generate_api_key.py  pyproject.toml  requirements-prod.txt  requirements.txt  sonar-project.properties
.claude/: settings.local.json
.claude/cache/artifact-index/: context.db
.claude/tsc-cache/e1c997d4-3856-47dd-ac9c-b70ed8b33fc9/: affected-repos.txt
claude-memory/guides/: getting-started.md
claude-memory/projects/: 3d-print-logger-overview.md
claude-memory/scripts/: .index.json  indexer.py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: admin.ts  analytics.ts  client.ts  index.ts  jobs.ts  maintenance.ts  printers.ts
frontend/src/composables/: index.ts  useAdmin.ts  useAnalytics.ts  useJobs.ts  useMaintenance.ts  usePrinters.ts
frontend/src/layouts/: DashboardLayout.vue
frontend/src/pages/: AnalyticsPage.vue  ApiKeyLoginPage.vue  DashboardPage.vue  JobsPage.vue  MaintenancePage.vue  PrintersPage.vue  PrintsPage.vue  SettingsPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: analytics.ts  api.ts  index.ts  job.ts  maintenance.ts  printer.ts
frontend/src/utils/: constants.ts  formatters.ts  index.ts  normalizeTitle.test.ts
logs/: .gitkeep
samples/: Player Tray Lid_PLA_40m34s.gcode  Player Tray Lid_PLA_54m24s_2.gcode
src/: __init__.py  config.py  main.py
src/api/: __init__.py  auth.py  schemas.py
src/api/routes/: __init__.py  admin.py  analytics.py  jobs.py  maintenance.py  printers.py
src/database/: __init__.py  crud.py  engine.py  models.py
src/database/migrations/: env.py
src/gcode/: __init__.py  parser.py
src/moonraker/: __init__.py  client.py  handlers.py  history.py  manager.py
src/parsers/: __init__.py  orcaslicer.py
src/utils/: __init__.py  crypto.py
tests/: __init__.py  conftest.py  test_indexer.py
tests/test_api/: __init__.py  test_admin.py  test_analytics.py  test_auth.py  test_jobs.py  test_maintenance.py  test_printers.py
tests/test_database/: __init__.py  test_crud.py  test_engine.py  test_maintenance.py  test_models.py
tests/test_gcode/: __init__.py  test_parser.py
tests/test_moonraker/: __init__.py  test_client.py  test_handlers.py  test_manager.py
thoughts/handoffs/3d-print-logger/: task-01-directory-structure.md  task-02-models-engine-migrations.md  task-05-crud-operations.md
thoughts/ledgers/: CONTINUITY_CLAUDE-3d-print-logger.md
thoughts/shared/plans/: architecture-design.md  (+3 more)
(+29 files in other folders)
